@@ -30,36 +30,6 @@ POST /api/order/paypal
 - WireMock
 - Maven
 
-## Running Tests
-
-Run `mvn test` to execute all unit and integration tests.
-
-### Testing Details
-
-- **Unit tests** cover all service classes and controller logic using JUnit 5 and Mockito. Each scenario (success, failure, notification, delayed response) is validated.
-- **Test files** are located in `src/test/java/com/example/sandbox/service/` and `src/test/java/com/example/sandbox/controller/`.
-- Example test classes:
-  - `PaypalSimulationServiceTest.java`: Validates PayPal business logic for all scenarios.
-  - `AlipaySimulationServiceTest.java`: Validates Alipay business logic for all scenarios.
-  - `OrderSimulationServiceTest.java`: Validates coordinator logic, notification, and delegation.
-  - `OrderControllerTest.java`: Validates controller endpoints and response structure.
-
-### How to Run Tests
-
-```
-mvn clean test
-```
-
-If you are using Java 21, ensure you have the latest Mockito and Byte Buddy dependencies. If you encounter mocking errors, add the JVM property:
-
-```
-mvn clean test -Dnet.bytebuddy.experimental=true
-```
-
-### Test Coverage
-
-All business logic branches and controller endpoints are covered by unit tests. Each test case is documented for clarity.
-
 ## Extending
 
 Add more scenarios or payment providers by updating the controller logic.
@@ -70,3 +40,12 @@ Add more scenarios or payment providers by updating the controller logic.
 - Each test case includes comments explaining its purpose and logic.
 
 For further details, see the source code and test files in the repository.
+
+## API Testing & Architecture Validation
+
+See [API-TESTING.md](./API-TESTING.md) for:
+
+- API endpoint details
+- How to test using Postman collection
+- Unit test case instructions
+- ArchUnit architectural test instructions
